[package]
name = "servermon-rs"
version = "0.1.0"
edition = "2021"
authors = ["Tristian Celestin <tristian.celestin@outlook.com>"]

[dependencies]
clap = {version = "4.0.32", features = ["derive"]}
log = "0.4.17"
stderrlog = "0.5.4"
surge-ping = "0.7.3"
tokio = { version = "1.23.0", features = ["full"] }

